--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 30px;
   background-color: #282c34;
   min-height: 100vh;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
   color: white;
 }
 
